don't load featured workspaces config
rm backfillFeaturedWorkspaces, FeaturedWorkspacesConfig, and FeaturedWorkspaceController